fix overflow

--- a/src/sass/gnome-shell/upstream/gnome-shell-sass/_drawing.scss
+++ b/src/sass/gnome-shell/upstream/gnome-shell-sass/_drawing.scss
@@ -394,7 +394,7 @@
   color: $fg;
 
   @if $flat {
-    box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.1); // (NordLex) none;
+    box-shadow: none;//inset 0 0 0 100px transparentize($panel_bg_color, 0.1); // (NordLex) none;
 
     &:active, &:focus, &:checked {
       box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.4); // (NordLex) $fg, 0.75);
@@ -408,17 +408,17 @@
     }
 
   } @else {
-    box-shadow: inset 0 0 0 100px transparentize($bg, 0.2);
+    box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.1); // (NordLex) $bg, 0.2);
 
     &:active, &:focus, &:checked {
-      box-shadow: inset 0 0 0 100px $bg;
+      box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.4); // (NordLex) $bg;
       &:hover {
-        box-shadow: inset 0 0 0 100px transparentize($bg, 0.05);
+        box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.5); // (NordLex) $bg, 0.05);
       }
     }
 
     &:hover {
-      box-shadow: inset 0 0 0 100px transparentize($bg, 0.1);
+      box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.5); // (NordLex) $bg, 0.1);
     }
   }
 
@@ -430,7 +430,11 @@
       transition-duration: 150ms;
       border: 8px solid transparent; // (NordLex) 3px
       border-radius: 14px; // (NordLex) 99px;
-      box-shadow:  inset 0 0 0 100px transparentize($panel_bg_color, 0.1) !important; // (NordLex) new
+      @if $flat {
+        box-shadow: none !important;
+      } @else {
+      	box-shadow: inset 0 0 0 100px transparentize($panel_bg_color, 0.1) !important; // (NordLex) new
+      }
     }
 
     &:active, &:focus, &:checked {
